status ui update

--- a/CLOCK_CHAT/templates/status/preview.html
+++ b/CLOCK_CHAT/templates/status/preview.html
@@ -11,7 +11,7 @@
   <div class="status-screen">
     <div class="status-header">
       <div class="profile-pic">
-        <img src="{{user_profile}}" style="border-radius: 50%;height: 100%">
+        <img src="{{user_profile}}" style="border-radius: 50%;height: 100%; width: 100%;">
       </div>
       <div class="user-info">
         <div class="number">{{user_name}}</div>
