--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -29,6 +29,7 @@
                 <div class="chat-avatar">{{ chat.title|first }}</div>
                 <div class="chat-header-info">
                 <h3 class="chat-title">{{ chat.title }}</h3>
+                <p class="chat-subtitle" style="font-size: 12px; color: #555;">{{ chat.latest_text }}</p>
                 </div>
                 <div style="max-width: 100px;gap: 10px;flex-direction: column;display: flex;">
                 <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">2+</div>
