--- a/static/css/clock.css
+++ b/static/css/clock.css
@@ -321,7 +321,7 @@ body {
 }
 
 .message {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     display: flex;
     max-width: 55%;
     gap: 10px;
@@ -360,7 +360,7 @@ body {
 }
 
 .message-bubble {
-    padding: 12px 16px;
+    padding: 10px 18px;
     border-radius: 18px;
     font-size: 14px;
     line-height: 1.5;
@@ -396,7 +396,7 @@ body {
 .message-emoji-container {
     position: absolute;
     right: -30px;
-    top: 35%;
+    top: 20px;
     transform: translateY(-50%);
     width: 24px;
     height: 24px;
@@ -413,6 +413,63 @@ body {
     font-size: 14px;
     cursor: pointer;
 }
+
+
+
+
+
+
+.emoji-popup {
+    background: #222;
+    border-radius: 10px;
+    padding: 6px 12px;
+    display: flex;
+    position: absolute;
+    z-index: 999;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+}
+.emoji-popup i {
+    font-size: 18px;
+    color: white;
+    transition: transform 0.2s;
+}
+.emoji-popup i:hover {
+    transform: scale(1.3);
+    color: var(--primary-color);
+}
+
+
+
+
+
+
+
+/* Default alignment (for received messages) */
+.emoji-reactions {
+    position: relative;
+    margin-top: 6px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 6px;
+    font-size: 13px;
+    
+}
+
+/* Override for sent messages */
+.message.sent .emoji-reactions {
+    justify-content: flex-end; /* right align for sent messages */
+}
+
+
+
+
+
+
+
+
+
+
 
 .message.received:hover .message-emoji {
     opacity: 1;
