--- a/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
+++ b/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
@@ -8,20 +8,11 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #e6f2f9; /* Light blue background */
-        display: flex;
-        justify-content: 100px;
-        align-items: center;
-        min-height: 120vh;
-        margin: 0;
-        padding: 100px;
-                
-    }
+    
     .container{
         position: relative;
         top: 50px;
+        padding-left: 276px;
     }
 
     .form-container {
