--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -32,7 +32,7 @@
                 <p class="chat-subtitle" style="font-size: 12.8px; color: #b3bc70;">{{ chat.latest_text }}</p>
                 </div>
                 <div style="max-width: 100px;gap: 10px;flex-direction: column;display: flex;">
-                <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">2+</div>
+                <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">{{ chat.unread_count }}</div>
                 <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">{{chat.created_at}}</div>
                 </div>
             </div>
