--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -23,7 +23,7 @@
             {% if chats %}
             <div class="chat-list" id="chatList">
             {% for chat in chats %}
-            <div class="chat-item" onclick="loadChatMessages({{ chat.id }}, '{{ chat.title }}')">
+            <div class="chat-item" onclick="loadChatMessages('{{ chat.id }}', '{{ chat.title }}')">
                 <input type="hidden" class="chat-id-hidden" value="{{ chat.id }}">
 
                 <div class="chat-avatar">{{ chat.title|first }}</div>
