--- a/CLOCK_CHAT/templates/status/status_view.html
+++ b/CLOCK_CHAT/templates/status/status_view.html
@@ -1,6 +1,6 @@
 {% extends "enduser/toolbar.html" %}
 {% load static %}
-{% block title %} Status|view| {% endblock%}
+{% block title %} Status | View {% endblock %}
 {% block extra_css %}
 <link rel="stylesheet" href="/static/css/statusview.css">
 {% endblock %}
@@ -9,61 +9,38 @@
 {% endblock %}
 
 {% block content %}
+<div class="wrapper">
+  <i style="position:absolute; left: 7%; top:4%; font-size: 22px;" class="fa fa-arrow-left" onclick="back()"></i>
+  <i class="fa-solid fa-less-than" style=" position: absolute;display: flex;left: 10%;"></i>
+  <i class="fa-solid fa-greater-than" style=" position: absolute;display: flex;right: 5%;"></i>
 
-  <div class="wrapper">
-    <i style="position:absolute;left: 7%; top:4%;font-size: 22px;"class="fa fa-arrow-left" onclick="back()"></i>
+  <div class="status-screen" id="status-container">
+    <!-- Status content will be rendered dynamically via JS -->
+  </div>
 
-    <div class="status-screen">
-      <div class="progress-bar">
-        <div class="progress-fill"></div>
-      </div>
-      {% if status_details %}
-      {% for status in status_details %}
-      <div class="status-header">
-        <div class="profile-pic">
-          <img src="{{user_details.user_profile}}" style="border-radius: 50%;height: 100% ;width: 100%;">
-        </div>
-        <div class="user-info">
-          <div class="number">{{user_details.full_name}}</div>
-          <div class="time">{{status.created_at}}</div>
-        </div>
-      </div>
-      <div class="status-body">
-        <img src="{{status.media_url}}" style="width:100%;">
-      </div>
-      {% if status.caption %}
-      <div style="display: flex;align-items: center;justify-content: center;font-size: larger;">{{status.caption}}</div>
-      {% endif %}
-      {% if user_details.id == request.user.id%}
-      <div class="view-count" onclick="open_viewer_modal({{status.id}})">
-        <i class="fa fa-eye"></i>
-        <span> {{status.viewers_count}}</span>
-      </div>
-      {% endif %}
-      {% endfor %}
-    
-      {% else %}
-      <p>Media not found</p>
-      {% endif %}
-
-
-        <!-- Viewer Modal -->
-        <div id="viewerModal" class="viewer-modal">
-          <div class="viewer-modal-box">
-            <div id="header">
-              <span class="close-btn" onclick="close_viewer_modal()">&times;</span>
-              <h2 style="text-align: start;">Seen by</h2>
-            </div>
-            <div class="viewer-modal-content">
-              <p style="text-align:center;color: black;">No viewers yet.</p>
-            </div>
-          </div>
-        </div>
-
-
-
-      </div>
 </div>
 
+<!-- Embed data safely for JavaScript -->
+<script id="status-data" type="application/json">
+  {
+    "statuses": [
+      {% for status in status_details %}
+        {
+          "id": {{ status.id }},
+          "media_url": "{{ status.media_url }}",
+          "caption": "{{ status.caption|escapejs }}",
+          "created_at": "{{ status.created_at|date:"Y-m-d H:i:s" }}",
+          "type": {{ status.type }},
+          "viewers_count": {{ status.viewers_count }}
+        }
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+    ],
+    "userId": {{ user_details.id }},
+    "userProfile": "{{ user_details.user_profile|default:'/static/images/default_avatar.png' }}",
+    "userFullName": "{{ user_details.full_name }}",
+    "viewerId": {{ request.user.id }}
+  }
+</script>
 
 {% endblock %}
