--- a/static/css/statusview.css
+++ b/static/css/statusview.css
@@ -34,19 +34,34 @@ body {
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
   }
 
-.progress-bar {
-  width: 100%;
-  height: 4px;
-  background-color: #ffffff;
-  position: absolute;
-  top: 0;
-}
-
-.progress-fill {
-  height: 100%;
-  background-color: white;
-  width: 60%;
-}
+  .progress-bar {
+    height: 4px;
+    background: rgba(255, 255, 255, 0.3);
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin-top: 5px;
+  }
+  
+  .progress-fill {
+    height: 100%;
+    width: 0%;
+    background: #fff;
+    transition: width 10s linear;
+  }
+  
+  .fa-less-than,
+  .fa-greater-than {
+    padding: 12px 10px; /* Apply padding by default */
+    transition: background 0.3s; /* Smooth background transition only */
+    border-radius: 5px; /* Optional to match hover style */
+  }
+  
+  .fa-less-than:hover,
+  .fa-greater-than:hover {
+    background: #3f4248;
+  }
 
 .status-header {
   display: flex;
@@ -85,6 +100,7 @@ body {
   align-items: center;
 }
 #caption{
+  color: black !important;
   border: none;
   background: #e1e1e1;
   border-radius: 20px;
