--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -7,8 +7,14 @@
 {% endblock %}
 {% block extra_js %}
 <script src="/static/js/chat_js.js"></script>
-<script src="/static/js/message.js"></script>
+<script src="/static/js/audio_send.js"></script>
+<script src="/static/js/delete_message.js"></script>
+<script src="/static/js/load_message.js"></script>
+<script src="/static/js/message_edit.js"></script>
 <script src="{% static 'js/media_send.js' %}" defer></script>
+<script src="/static/js/message_misle.js"></script>
+<script src="/static/js/message_send.js"></script>
+<script src="/static/js/react_message.js"></script>
 {% endblock %}
 
 {% block content %}
