--- a/static/css/statusview.css
+++ b/static/css/statusview.css
@@ -14,7 +14,6 @@ body {
 }
 
 .wrapper {
-  padding: 10px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -24,6 +23,7 @@ body {
 }
 
 .status-screen {
+  border-radius: 5px;
   padding: 10px 0px;
   width: 30%;
   height: 100%;
